Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <script>
-window.location.href = "https://linktr.ee/redeemedraiment"; 
+window.location.href = "https://redeemedraiment.lojavirtualnuvem.com.br"; 
 
 </script>
